--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=${URL_CONNECTION}
-spring.datasource.username=${USER_NAME}
-spring.datasource.password=${PASSWORD}
+spring.datasource.url=jdbc:postgresql://j1scorpii.com.br:36002/postgres
+spring.datasource.username=postgres
+spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-app.admin.password=${ADMIN_PASSWORD}
+app.admin.password=issonaoehumasenha
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true 
