--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
 			<version>1.3.30</version>
 		</dependency>
 
+		<dependency>
+			<groupId>de.androidpit</groupId>
+			<artifactId>color-thief</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+
     </dependencies>
 
     <build>
