--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
 			<version>1.1.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.sejda.imageio</groupId>
+			<artifactId>webp-imageio</artifactId>
+			<version>0.1.6</version>
+		</dependency>
+
     </dependencies>
 
     <build>
